# py_auth_amqp_wrapper

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  Pipfile  README.md  README.rst  example_config.json  setup.cfg
.github/workflows/: pypi_upload.yaml
py_auth_amqp_wrapper/: __init__.py  __main__.py  _getlogger.py  _load_config.py  _runner.py
