[metadata]
name = py_auth_amqp_wrapper
author = Ole Hannemann
author_email = cerberus885@gmail.com
url = https://github.com/bad-microservices/py_auth_amqp_wrapper
description = A wrapper around pyjwt
keywords = AMQP
long_description = file: README.rst
license = MIT
license_files = LICENSE
version = attr:py_auth_amqp_wrapper.__version__
classifiers =
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers

[options]
packages = py_auth_amqp_wrapper
install_requires =
    aio-pika
    py_auth_micro
    jwt_helper
    amqp_helper

